# data-analyst-challenge

./: .env  .gitignore  ANALISE.md  Dockerfile  GUIA_UTILIZACAO.md  README.md  SOLUTION.md  dbt_project.yml  docker-compose.yaml  main.py  pyproject.toml  queries_basicas_readme.sql  requirements.txt
.dbt/: profiles.yml
App/dbt/dbt_streaming_daily/: dbt_project.yml
analytics_dbt/: dbt_project.yml
analytics_dbt/models/marts/: mart__revenue_by_genre.sql  mart__revenue_by_genre.yml  mart__revenue_by_region.sql  mart__revenue_by_region.yml  (+8 more)
data/exports/: mart__revenue_by_genre.parquet  mart__revenue_by_region.parquet  mart__revenue_by_store.parquet  mart__revenue_overview.parquet  mart__revenue_region_goals.parquet  mart__revenue_year_over_year.parquet
dbt/: dbt_project.yml  packages.yml  profiles.yml
models/marts/: analytics_dashboard.sql  estrategia_receita.sql  projecao_2025.sql  schema.yml  tendencias_regionais.sql
models/stage/: one_rpm_stage.sql  sources.yaml
models/staging/: src_onerpm.yml  stg_onerpm_raw.sql
onerpm/: app.py
onerpm_data_analyst_test/: bronze_to_silver.py  cluster_end.py  cluster_star.py  helpers.py  master.py  read_report.py  runion_parquet.py  silver_to_gold_bi.py  source_to_bronze.py
pbix/: ONErpm_PBI_Report.pbix
pipeline/: main.py
scripts/: export_marts_to_parquet.py  ingest.py  links.txt  load_files_to_duckdb.py  load_to_duckdb.py
scripts/validate_raw/: boolean_validate.py  count_per_year.py  is_strem_is_downloaed_null.py  null_currency.py  quantity_revenue_validate.py  sample.py  validate_columns.py
(+29 files in other folders)
