[project]
name = "onerpm"
version = "0.1.0"
description = ""
authors = [
    {name = "gabriel-garciae",email = "eng.gabrielgevangelista@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "dbt-core (>=1.10.6,<2.0.0)",
    "dbt-duckdb (>=1.9.4,<2.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "dlt (>=1.14.1,<2.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
